--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,3 +21,6 @@ jobs:
 
             - name: "Clone the repository"
               uses: actions/checkout@v4
+
+            - name: "Install dependencies"
+              run: npm install
