--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
             - name: "Clone the repository"
               uses: actions/checkout@v4
 
+            - name: "List directories before install dependencies"
+              run: ls
+
             - name: "Install dependencies"
               run: npm install
 
