--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,11 @@ jobs:
             - name: "List directories"
               run: ls
 
-            - name: "Run tests"
-              run: npm test
+            - name: "Run lint"
+              run: npm run lint
 
-            - name: "Run build"
-              run: npm run build
+            # - name: "Run tests"
+            #   run: npm test
+
+            # - name: "Run build"
+            #   run: npm run build
